Resolved sonarqube issues.